# rustsomware

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: ui.html
src/: encryption.rs  key_utils.rs  main.rs  ui.rs
