[package]
name = "lulsomware"
version = "0.1.0"
authors = ["kreat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enc_file = "0.3.15"
rand = "0.8.0"
serde = "1.0.118"
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["v4"] }
web-view = "0.7.2"
